--- a/style.css
+++ b/style.css
@@ -1,8 +1,30 @@
-p {
-    color:rgb(1, 128, 255);
-    border-style:solid
+p{
+    color:blue;
+    padding:10;
+    font-family: arial;
+    border-style: solid;
+    border-color: black;
 }
 h1{
     color:red;
     border-style:solid
 }
+body 
+#all-contents {
+  max-width: 800px;
+    margin: auto;
+}
+
+/* navigation menu */
+nav {
+    background: rgb(239, 80, 41);
+   margin: 0 auto;
+    display: flex;
+    padding: 10px;
+}
+h1 {
+    display: flex;
+    align-items: center;
+    color: white;
+    flex: 1;
+    margin: 0
